Add tailwind css

--- a/lib/tqm_web/templates/page/index.html.heex
+++ b/lib/tqm_web/templates/page/index.html.heex
@@ -3,6 +3,9 @@
   <p>Peace of mind from prototype to production</p>
 </section>
 
+<!-- example of tailwind being used -->
+<h1 class="text-red-500 text-5xl font-bold text-center">Tailwind CSS</h1>
+
 <section class="row">
   <article class="column">
     <h2>Resources</h2>
