--- a/lib/tqm_web/live/home_live.html.heex
+++ b/lib/tqm_web/live/home_live.html.heex
@@ -2,7 +2,7 @@
     <%= live_component @socket, TqmWeb.NavbarComponent %>
     <div id="left-short-about" class="sm:flex flex-col flex-grow w-1/5 max-w-xs border-r-2 border-gray-400  hidden">
         <div id="photo-and-blurb" class="flex flex-col w-full pt-3">
-            <img src="images/me.jpg" alt="Me at a laptop, in a comfy chair" class="flex w-3/4 self-center rounded-3xl">
+            <img src="images/me.jpg" alt="Me at a laptop, in a comfy chair" class="flex w-3/4 self-center rounded-3xl drop-shadow-md mb-3">
             <span class="px-3 text-center">
                 Hi, welcome to my website! I'm (Thomas) Quigley Malcolm. 
                 I'm a lot of things, but mostly I'm just trying to be a good person. 
