Add base 'About' page

--- a/lib/tqm_web/live/components/navbar_component.html.heex
+++ b/lib/tqm_web/live/components/navbar_component.html.heex
@@ -16,8 +16,8 @@
     <%# <%= live_patch "Projects",
         to: Routes.live_path(@socket, TqmWeb.HomeLive),
         class: "text-xl" %>
-    <%# <%= live_patch "About",
-        to: Routes.live_path(@socket, TqmWeb.HomeLive),
+    <%= live_patch "About",
+        to: Routes.live_path(@socket, TqmWeb.AboutLive),
         class: "text-xl" %>
 
     </nav>
