--- a/lib/tqm_web/live/home_live.html.heex
+++ b/lib/tqm_web/live/home_live.html.heex
@@ -8,7 +8,7 @@
                 I'm a lot of things, but mostly I'm just trying to be a good person. 
                 If you want to learn more about me head on over to my 
                 <%= live_patch "about", 
-                    to: Routes.live_path(@socket, TqmWeb.HomeLive),
+                    to: Routes.live_path(@socket, TqmWeb.AboutLive),
                     class: "text-blue-500" %>
                 page.
             </span>
