--- a/lib/tqm_web/live/components/navbar_component.html.heex
+++ b/lib/tqm_web/live/components/navbar_component.html.heex
@@ -1,8 +1,9 @@
 <header class="bg-pink-900 text-white pt-3 py-3 px-3">
     <nav class="space-x-3">
+    <% is_active_path(@socket, :home) %>
     <%= live_patch "Home",
         to: Routes.live_path(@socket, TqmWeb.HomeLive),
-        class: "text-3xl font-semibold"%>
+        class: "text-3xl font-semibold #{if is_active_path(@socket, :home), do: 'underline'}" %>
     <%# TODO: Uncomment these as the pages get build out %>
     <%# <%= live_patch "Blog",
         to: Routes.live_path(@socket, TqmWeb.HomeLive),
@@ -18,7 +19,7 @@
         class: "text-xl" %>
     <%= live_patch "About",
         to: Routes.live_path(@socket, TqmWeb.AboutLive),
-        class: "text-xl" %>
+        class: "text-xl #{if is_active_path(@socket, :about), do: 'underline'}" %>
 
     </nav>
 </header>
