--- a/lib/tqm_web/controllers/page_html/home.html.heex
+++ b/lib/tqm_web/controllers/page_html/home.html.heex
@@ -1,5 +1,5 @@
 <div class="flex flex-col h-screen max-h-screen">
-  <.navbar toplevel={:home} />
+  <.navbar tlp={:home} />
   <div id="page-body" class="flex flex-grow">
     <div
       id="left-short-about"
