add: link to about page from home page

--- a/lib/tqm_web/controllers/page_html/home.html.heex
+++ b/lib/tqm_web/controllers/page_html/home.html.heex
@@ -14,7 +14,11 @@
           Hi, welcome to my website!
           I'm Quigley, amateur at life, and totally real human person.
           Just trying to do my best, but I don't always succeed.
-          If you want to learn more about me head on over to my about page.
+          If you want to learn more about me head on over to my
+          <.link navigate="/about" class="text-blue-500 underline">
+            about
+          </.link>
+          page.
         </span>
       </div>
       <div id="spacer" class="h-full"></div>
