update: add summary content about me to about page

--- a/lib/tqm_web/controllers/page_html/about.html.heex
+++ b/lib/tqm_web/controllers/page_html/about.html.heex
@@ -1,1 +1,43 @@
-Hi
+<div id='about-page-content' class='grid grid-cols-2 gap:11'>
+    <div id='main-about'>
+        <img
+          src="images/me.jpg"
+          alt="Me at a laptop, in a comfy chair"
+          class="w-1/4 float-left rounded-3xl drop-shadow-md mb-5 mr-5"
+        />
+        <p>
+            Hi, I'm not sure if it's weird or cool that you're on my about page,
+            but hey you're here now.
+        </p>
+        <br>
+        <h1 class="font-bold italic text-lg">Summary</h1>
+        <p>
+            My name is Thomas Quigley Malcolm, but you can call me Quigley.
+            I grew up in a small town in Northern Wisconsin, but now live out in Seattle, WA.
+            Professionally I'm a Software Engineer. Non-professionally I'm a bit of a lot of things:
+            wood worker, nonferrous metal worker, runner, bartender, barista, TTRPG player and storyteller.
+            I like to read and most of what I read is mystery, fantasy, and philosophy.
+
+            <br>
+            <br>
+
+            If you're looking to find me in Seattle your best bets are
+            <.link navigate='https://www.lupofremont.com/' class='text-blue-500 underline'>
+                Lupo
+            </.link>
+            in Upper Fremont,
+            <.link navigate='https://www.thepioneercollective.com/seattle-belltown' class='text-blue-500 underline'>
+                The Pioneer Collective
+            </.link>
+            in Belltown, or at the
+            <.link navigate='https://www.pratt.org/' class='text-blue-500 underline'>
+                Pratt Fine Arts Center
+            </.link>
+            in Central District.
+        </p>
+    </div>
+    <div id='detailed-about'>
+        <div id='professional'>TODO: Professional</div>
+        <div id='personal-projects'>TODO: Personal Projects</div>
+    </div>
+</div>
