--- a/lib/tqm_web/controllers/blog_post_html/show.html.heex
+++ b/lib/tqm_web/controllers/blog_post_html/show.html.heex
@@ -2,9 +2,11 @@
   Blog post <%= @blog_post.id %>
   <:subtitle>This is a blog_post record from your database.</:subtitle>
   <:actions>
-    <.link href={~p"/blog/#{@blog_post}/edit"}>
-      <.button>Edit blog_post</.button>
-    </.link>
+    <%= if Tqm.Accounts.Person.is_owner?(assigns[:current_person]) do %>
+      <.link href={~p"/blog/#{@blog_post}/edit"}>
+        <.button>Edit blog_post</.button>
+      </.link>
+    <% end %>
   </:actions>
 </.header>
 
