update: home page to render templates and update templates accordingly
With the home page rendering the templates, we don't want the templates
to always render the vertical padding between the nav and the rest of
the page (or the horizontal padding either actually). So now we by
default render the padding unless `%{page_padding: false}` is part of
the `conn.assigns`

--- a/lib/tqm_web/components/layouts/app.html.heex
+++ b/lib/tqm_web/components/layouts/app.html.heex
@@ -1,5 +1,5 @@
 <.navbar tlp={assigns[:tlp]} />
-<main class="px-4 py-20 sm:px-6 lg:px-8">
+<main class={if assigns[:page_padding] == nil or assigns[:page_padding], do: "px-4 py-4"} >
   <div class="mx-auto">
     <.flash kind={:info} title="Success!" flash={@flash} />
     <.flash kind={:error} title="Error!" flash={@flash} />
