--- a/lib/tqm_web/components/layouts/app.html.heex
+++ b/lib/tqm_web/components/layouts/app.html.heex
@@ -1,5 +1,5 @@
-<.navbar tlp={assigns[:tlp]} />
-<main class={if assigns[:page_padding] == nil or assigns[:page_padding], do: "px-4 py-4"} >
+<.navbar tlp={assigns[:tlp]} current_person={@current_person} />
+<main class={if assigns[:page_padding] == nil or assigns[:page_padding], do: "px-4 py-4"}>
   <div class="mx-auto">
     <.flash kind={:info} title="Success!" flash={@flash} />
     <.flash kind={:error} title="Error!" flash={@flash} />
