add: css class to be used when rendering markdown
tailwind css adds a bunch of defaults for how `a`, `ul`, `li` and many
more html tags are styled. When we render markdown, we want lists to be
indented and bulleted. We want `a` tags used for link text to render as
a link in coloration and decoration. I'm sure we'll find other markdown
styling desires in the future which will require overriding the tailwind
defaults for many html tags, but this is a good enough start.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,4 +2,18 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+div.markdown_render ul > li {
+    margin-left: 15px;
+    list-style-type: initial;
+
+}
+
+div.markdown_render a {
+    color: #0000EE;
+    text-decoration: underline;
+}
+
+div.markdown_render a:visited {
+    color: #551A8B;
+}
 /* This file is for your main application CSS */
