--- a/lib/tqm_web/live/about_live/index.html.heex
+++ b/lib/tqm_web/live/about_live/index.html.heex
@@ -1,5 +1,6 @@
-<div id="about-page-content" class="grid grid-cols-2 gap:11">
-  <div id="main-about">
+<div id="about-page-content" class="grid grid-cols-2 gap-4">
+  <div id="personal">
+    <h1 class="text-xl font-semibold text-center pb-2">About Me</h1>
     <img
       src="images/me.jpg"
       alt="Me at a laptop, in a comfy chair"
@@ -10,13 +11,12 @@
       but hey you're here now.
     </p>
     <br />
-    <h1 class="font-bold italic text-lg">Summary</h1>
     <p>
-      My name is Thomas Quigley Malcolm, but you can call me Quigley.
+      My name is Thomas Quigley Malcolm, but I generally go by Quigley.
       I grew up in a small town in Northern Wisconsin, but now live out in Seattle, WA.
       Professionally I'm a Software Engineer. Non-professionally I'm a bit of a lot of things:
       wood worker, nonferrous metal worker, runner, bartender, barista, TTRPG player and storyteller.
-      I like to read and most of what I read is mystery, fantasy, and philosophy. <br />
+      I like to read and if I'm carry a book it's likely either fantasy, mystery, or philosophy. <br />
       <br /> If you're looking to find me in Seattle your best bets are
       <.link navigate="https://www.lupofremont.com/" class="text-blue-500 underline">
         Lupo
@@ -34,20 +34,17 @@
       </.link>
       in Central District.
     </p>
-  </div>
-  <div id="detailed-about">
-    <div id="professional-history">
-      <div>Professional History</div>
-      <div id="jobs">
-        <%= for job <- @jobs do %>
-          <.live_component
-            module={TqmWeb.LiveComponents.JobWithTogglableDetails}
-            id={"job-#{job.id}"}
-            job={job}
-          />
-        <% end %>
-      </div>
+</div>
+  <div id="professional-history">
+    <h2 class="text-xl font-semibold text-center pb-2">Professional History</h2>
+    <div id="jobs">
+      <%= for job <- @jobs do %>
+        <.live_component
+          module={TqmWeb.LiveComponents.JobWithTogglableDetails}
+          id={"job-#{job.id}"}
+          job={job}
+        />
+      <% end %>
     </div>
-    <div id="personal-projects">TODO: Personal Projects</div>
   </div>
 </div>
