fix: formatting issue that was not caught in about_live heex

--- a/lib/tqm_web/live/about_live/index.html.heex
+++ b/lib/tqm_web/live/about_live/index.html.heex
@@ -16,7 +16,8 @@
       I grew up in a small town in Northern Wisconsin, but now live out in Seattle, WA.
       Professionally I'm a Software Engineer. Non-professionally I'm a bit of a lot of things:
       wood worker, nonferrous metal worker, runner, bartender, barista, TTRPG player and storyteller.
-      I like to read and if I'm carry a book it's likely either fantasy, mystery, or philosophy. <br />
+      I like to read and if I'm carry a book it's likely either fantasy, mystery, or philosophy.
+      <br />
       <br /> If you're looking to find me in Seattle your best bets are
       <.link navigate="https://www.lupofremont.com/" class="text-blue-500 underline">
         Lupo
@@ -34,7 +35,7 @@
       </.link>
       in Central District.
     </p>
-</div>
+  </div>
   <div id="professional-history">
     <h2 class="text-xl font-semibold text-center pb-2">Professional History</h2>
     <div id="jobs">
