update: about page css, switch to vertical viewing on small screens
Previously we were forcing a two column viewing format. This was fine on
larger screens. But on smaller screens everything became incredibly
cramped. Tailwind uses css width minums for delineation. Thus the
default a flex type, except when the width of the viewing window is
greater than tailwind's size `md` (i.e. 768 pixels). When it crosses the
`md` size threshold, it snaps in to the previous two column viewing
style.

Additionally, in the vertical viewing style, the professional
history was for some reason stopping at a width of 506 pixels. I wasn't
sure why this was happening but applying a `w-full` (i.e. `width: 100%`)
to the main div of the professional history div resolved the issue.

--- a/lib/tqm_web/live/about_live/index.html.heex
+++ b/lib/tqm_web/live/about_live/index.html.heex
@@ -1,4 +1,4 @@
-<div id="about-page-content" class="grid grid-cols-2 gap-4">
+<div id="about-page-content" class="md:grid md:grid-cols-2 md:gap-4 flex flex-wrap">
   <div id="personal">
     <h1 class="text-xl font-semibold text-center pb-2">About Me</h1>
     <img
@@ -36,7 +36,7 @@
       in Central District.
     </p>
   </div>
-  <div id="professional-history">
+  <div id="professional-history" class="w-full">
     <h2 class="text-xl font-semibold text-center pb-2">Professional History</h2>
     <div id="jobs">
       <%= for job <- @jobs do %>
