Remove lupo as a place to find me

--- a/lib/tqm_web/live/about_live/index.html.heex
+++ b/lib/tqm_web/live/about_live/index.html.heex
@@ -19,17 +19,13 @@
       I like to read and if I'm carrying a book it's likely either fantasy, mystery, or philosophy.
       <br />
       <br /> If you're looking to find me in Seattle your best bets are
-      <.link navigate="https://www.lupofremont.com/" class="text-blue-500 underline">
-        Lupo
-      </.link>
-      in Upper Fremont,
       <.link
         navigate="https://www.thepioneercollective.com/seattle-belltown"
         class="text-blue-500 underline"
       >
         The Pioneer Collective
       </.link>
-      in Belltown, or at the
+      in Belltown or at the
       <.link navigate="https://www.pratt.org/" class="text-blue-500 underline">
         Pratt Fine Arts Center
       </.link>
