Update which TPC in Seattle I can be found at

--- a/lib/tqm_web/live/about_live/index.html.heex
+++ b/lib/tqm_web/live/about_live/index.html.heex
@@ -20,12 +20,12 @@
       <br />
       <br /> If you're looking to find me in Seattle your best bets are
       <.link
-        navigate="https://www.thepioneercollective.com/seattle-belltown"
+        navigate="https://www.thepioneercollective.com/seattle-ballard"
         class="text-blue-500 underline"
       >
         The Pioneer Collective
       </.link>
-      in Belltown or at the
+      in Ballard or at the
       <.link navigate="https://www.pratt.org/" class="text-blue-500 underline">
         Pratt Fine Arts Center
       </.link>
