Update 'about me' details post move to Iowa City

--- a/lib/tqm_web/live/about_live/index.html.heex
+++ b/lib/tqm_web/live/about_live/index.html.heex
@@ -13,23 +13,20 @@
     <br />
     <p>
       My name is Thomas Quigley Malcolm, but I generally go by Quigley.
-      I grew up in a small town in Northern Wisconsin, but now live out in Seattle, WA.
+      I grew up in a small town in Northern Wisconsin, but currently live in out in Iowa City, IA.
       Professionally I'm a Software Engineer. Non-professionally I'm a bit of a lot of things:
-      wood worker, nonferrous metal worker, runner, bartender, barista, TTRPG player and storyteller.
+      wood worker, tinkerer, runner, bartender, barista, and TTRPG Player.
       I like to read and if I'm carrying a book it's likely either fantasy, mystery, or philosophy.
       <br />
-      <br /> If you're looking to find me in Seattle your best bets are
-      <.link
-        navigate="https://www.thepioneercollective.com/seattle-ballard"
-        class="text-blue-500 underline"
-      >
-        The Pioneer Collective
+      <br /> If you're looking to find me in Iowa City your best bets are either at
+      <.link navigate="https://mergeic.com/" class="text-blue-500 underline">
+        MERGE
       </.link>
-      in Ballard or at the
-      <.link navigate="https://www.pratt.org/" class="text-blue-500 underline">
-        Pratt Fine Arts Center
+      coworking space or the
+      <.link navigate="https://icfablab.org/" class="text-blue-500 underline">
+        FabLab
       </.link>
-      in Central District.
+      maker space.
     </p>
   </div>
   <div id="professional-history" class="w-full">
