--- a/lib/tqm_web/components/layouts/root.html.heex
+++ b/lib/tqm_web/components/layouts/root.html.heex
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
-    <.live_title suffix=" · Phoenix Framework">
-      {assigns[:page_title] || "Tqm"}
+    <.live_title prefix="Quigley Malcolm">
+      {assigns[:page_title]}
     </.live_title>
     <link rel="icon" type="image/png" href={~p"/favicon.png"} />
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
