Fix double  typo on about page

--- a/lib/tqm_web/live/about_live/index.html.heex
+++ b/lib/tqm_web/live/about_live/index.html.heex
@@ -13,7 +13,7 @@
     <br />
     <p>
       My name is Thomas Quigley Malcolm, but I generally go by Quigley.
-      I grew up in a small town in Northern Wisconsin, but currently live in out in Iowa City, IA.
+      I grew up in a small town in Northern Wisconsin, but currently live in Iowa City, IA.
       Professionally I'm a Software Engineer. Non-professionally I'm a bit of a lot of things:
       wood worker, tinkerer, runner, bartender, barista, and TTRPG Player.
       I like to read and if I'm carrying a book it's likely either fantasy, mystery, or philosophy.
